--- a/config/config.js.example
+++ b/config/config.js.example
@@ -24,8 +24,17 @@ module.exports =
     'maxSize': 2 * 1024 * 1024
   },
   'capacity': 600,
-  'waitlist': 200,
-  'fakeuser': {
-    'passport': { 'user': 'locustuserid' }
+  'waitlist': 200
+  'maxSize': '5mb'
+  }
+  'twitter':{
+    'consumer_key':'MY_CONSUMER_KEY',
+    'consumer_secret':'MY_CONSUMER_SECRET',
+    'access_token_key':'MY_ACCESS_TOKEN_KEY',
+    'access_token_secret':'MY_ACCESS_TOKEN_SECRET'
+  }
+  'slack':{
+    'token':'SLACK_LEGACY_TOKEN',
+    'channel:'C43KDNGR0'
   }
 }
